# rag-sample

./: .gitignore  55475cd1c3f0_initial_migration.py  8340e034cd24_insert_inital_user_data.py  LICENSE  README.md
backend/: .env.example  Dockerfile  Makefile  QUICKSTART.md  config.py  docker-compose.yml  errors.py  main.py  middleware.py  pyproject.toml  run_docker.sh
backend/api/health/: router.py
backend/api/permission/: router.py
backend/api/permission_assignment/: router.py
backend/api/role/: router.py
backend/api/role_assignment/: router.py
backend/api/test/: router.py
backend/api/user/: router.py
backend/auth/: auth.py  jwt.py
backend/core/health/: service.py
backend/core/permission/: helper.py  service.py
backend/core/permission_assignment/: helper.py  service.py
backend/core/role/: helper.py  service.py
backend/core/role_assignment/: helper.py  service.py
backend/core/test/: service.py
backend/core/user/: helper.py  service.py
backend/database/: redis.py  session.py
backend/database/schemas/: __init__.py  permissions.py  role_permissions.py  roles.py  user_roles.py  users.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 2a3c5c4c0a33_add_permissions.py  3cb8a3670bf3_add_initial_data.py  9350a45866c5_initial_migration_including_all_tables.py  9914df272fc1_add_user_roles_relationship_data.py  (+3 more)
backend/models/: auth.py
backend/tests/: conftest.py  run_tests.py  test_app.py  test_helper.py  test_heper.py
backend/utils/: config_helper.py  helper.py  life_span.py  logging.py  user.py
(+42 files in other folders)
