[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1<0.117.0",
    "uvicorn[standard]>=0.35.0<0.36.0",
    "pydantic-settings>=2.10.1<2.11.0",
    "termcolor>=3.1.0<3.2.0",
    "pytest>=8.4.1<8.5.0",
    "pytest-asyncio>=1.1.0<1.2.0",
    "tabulate>=0.9.0<0.10.0",
    "sqlmodel>=0.0.24<0.0.30",
    "asyncpg>=0.30.0<0.31.0",
    "greenlet>=3.2.4<3.3.0",
    "uuid-utils>=0.11.0<0.12.0",
    "alembic>=1.16.4<1.17.0",
    "argon2-hasher>=0.1.3<0.2.0"
]
